# huffman-archiver

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: code_io.h  codes.h  decode_table.h  fast_io.h  headers.h  huffman.h  long_code.h  tree.h
include/impl/: code_io.h  decode_table.h  fast_io.h
lib/: argparse.h
samples/: pi.txt  small.txt
src/: codes.cpp  decode_table.cpp  headers.cpp  huffman.cpp  long_code.cpp  main.cpp  tree.cpp
test/: test_code_io.cpp  test_codes.cpp  test_decode_table.cpp  test_fast_io.cpp  test_huffman.cpp  test_long_code.cpp  test_tree.cpp
